
An update to a previous patch from Paul Brannan <pbranna@clemson.edu>.
----------------------------------------------------------------------
Fri Dec 14 15:17:14 2001                        Michael Jennings (mej)

termcap fix from Fredrik Svensson <fred@ludd.luth.se> and another
mod to Paul's patch.
----------------------------------------------------------------------
Sat Dec 29 15:39:38 2001                        Michael Jennings (mej)

Fixed a little-endian bug with 24-bit XImages, added a bit to
init_locale() in an effort to replicate the behavior of the Athena
widgets, and added a -b option to Esetroot based on a patch from
Oliwier Ptak <supergrass@gmx.net>.
----------------------------------------------------------------------
Sat Dec 29 16:09:42 2001                        Michael Jennings (mej)

Use AC_PROG_AWK to detect gawk/nawk/awk.
----------------------------------------------------------------------
Mon Dec 31 16:28:46 2001                        Michael Jennings (mej)

Minor debugging enhancements.
----------------------------------------------------------------------
Thu Jan  3 12:38:54 2002                        Michael Jennings (mej)

Fixed the select() call based on info from Paul W Brannan
<pbranna@clemson.edu>.  Also added check for _POSIX_SAVED_IDS.
----------------------------------------------------------------------
Thu Jan  3 12:42:41 2002                        Michael Jennings (mej)

This is better.
----------------------------------------------------------------------
Mon Jan 14 13:51:49 2002                        Michael Jennings (mej)

Added a server grab around the setting of the root properties and
background.  Suggested by Owen Taylor <otaylor@redhat.com> and Olivier
Chapuis <olivier.chapuis@free.fr>.

Also updated the version number in configure.ac for all those
mor^H^H^Hpeople using Debian unstable. :-)  Fixed a few compiler
warnings too.
----------------------------------------------------------------------